--- a/catalogo-project/package.json
+++ b/catalogo-project/package.json
@@ -10,8 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.1",
+    "@tailwindcss/vite": "^4.1.1",
+    "axios": "^1.8.4",
+    "framer-motion": "^12.6.3",
+    "install": "^0.13.0",
+    "lucide-react": "^0.487.0",
+    "npm": "^11.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
